add p.2 of Kirill F. offers and changed docs
